// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction Group Transaction Group Tests encode transactions with signature 1`] = `
Uint8Array [
  130,
  163,
  115,
  105,
  103,
  196,
  64,
  181,
  71,
  137,
  6,
  215,
  141,
  31,
  125,
  199,
  116,
  180,
  240,
  48,
  240,
  86,
  222,
  2,
  147,
  234,
  146,
  164,
  218,
  89,
  250,
  185,
  105,
  72,
  235,
  164,
  10,
  107,
  50,
  175,
  108,
  155,
  49,
  99,
  42,
  75,
  214,
  216,
  45,
  102,
  232,
  43,
  72,
  219,
  244,
  57,
  89,
  110,
  37,
  182,
  75,
  57,
  115,
  36,
  139,
  210,
  113,
  128,
  23,
  189,
  14,
  163,
  116,
  120,
  110,
  138,
  163,
  97,
  109,
  116,
  206,
  0,
  1,
  138,
  136,
  163,
  102,
  101,
  101,
  205,
  3,
  232,
  162,
  102,
  118,
  206,
  3,
  5,
  0,
  212,
  163,
  103,
  101,
  110,
  172,
  116,
  101,
  115,
  116,
  110,
  101,
  116,
  45,
  118,
  49,
  46,
  48,
  162,
  103,
  104,
  196,
  32,
  72,
  99,
  181,
  24,
  164,
  179,
  200,
  78,
  200,
  16,
  242,
  45,
  79,
  16,
  129,
  203,
  15,
  113,
  240,
  89,
  167,
  172,
  32,
  222,
  198,
  47,
  127,
  112,
  229,
  9,
  58,
  34,
  163,
  103,
  114,
  112,
  196,
  32,
  202,
  79,
  82,
  7,
  197,
  237,
  213,
  55,
  117,
  226,
  131,
  74,
  221,
  85,
  86,
  215,
  64,
  133,
  212,
  7,
  58,
  234,
  248,
  162,
  222,
  53,
  161,
  29,
  141,
  101,
  133,
  49,
  162,
  108,
  118,
  206,
  3,
  5,
  4,
  188,
  163,
  114,
  99,
  118,
  196,
  32,
  173,
  207,
  218,
  63,
  201,
  93,
  52,
  35,
  35,
  15,
  161,
  115,
  204,
  245,
  211,
  90,
  68,
  182,
  3,
  164,
  184,
  247,
  131,
  205,
  149,
  104,
  201,
  215,
  253,
  11,
  206,
  245,
  163,
  115,
  110,
  100,
  196,
  32,
  138,
  24,
  8,
  153,
  89,
  167,
  60,
  236,
  255,
  238,
  91,
  198,
  115,
  190,
  137,
  254,
  3,
  35,
  198,
  98,
  195,
  33,
  65,
  123,
  138,
  200,
  132,
  194,
  74,
  0,
  44,
  25,
  164,
  116,
  121,
  112,
  101,
  163,
  112,
  97,
  121,
]
`;

exports[`Transaction Group Transaction Group Tests encode transactions with signature 2`] = `
Uint8Array [
  130,
  163,
  115,
  105,
  103,
  196,
  64,
  237,
  88,
  110,
  74,
  223,
  25,
  218,
  49,
  208,
  89,
  84,
  84,
  5,
  15,
  58,
  52,
  14,
  81,
  206,
  129,
  127,
  240,
  83,
  17,
  226,
  113,
  250,
  152,
  179,
  188,
  200,
  30,
  126,
  244,
  66,
  151,
  100,
  5,
  144,
  215,
  42,
  59,
  184,
  158,
  207,
  198,
  26,
  128,
  70,
  18,
  199,
  238,
  104,
  96,
  17,
  132,
  7,
  243,
  154,
  121,
  2,
  93,
  214,
  13,
  163,
  116,
  120,
  110,
  138,
  164,
  97,
  114,
  99,
  118,
  196,
  32,
  72,
  118,
  175,
  30,
  96,
  187,
  134,
  238,
  76,
  228,
  146,
  219,
  137,
  200,
  222,
  52,
  40,
  86,
  146,
  168,
  129,
  190,
  15,
  103,
  21,
  24,
  5,
  31,
  88,
  27,
  201,
  123,
  163,
  102,
  101,
  101,
  205,
  3,
  232,
  162,
  102,
  118,
  206,
  3,
  13,
  0,
  56,
  163,
  103,
  101,
  110,
  172,
  116,
  101,
  115,
  116,
  110,
  101,
  116,
  45,
  118,
  49,
  46,
  48,
  162,
  103,
  104,
  196,
  32,
  72,
  99,
  181,
  24,
  164,
  179,
  200,
  78,
  200,
  16,
  242,
  45,
  79,
  16,
  129,
  203,
  15,
  113,
  240,
  89,
  167,
  172,
  32,
  222,
  198,
  47,
  127,
  112,
  229,
  9,
  58,
  34,
  163,
  103,
  114,
  112,
  196,
  32,
  202,
  79,
  82,
  7,
  197,
  237,
  213,
  55,
  117,
  226,
  131,
  74,
  221,
  85,
  86,
  215,
  64,
  133,
  212,
  7,
  58,
  234,
  248,
  162,
  222,
  53,
  161,
  29,
  141,
  101,
  133,
  49,
  162,
  108,
  118,
  206,
  3,
  13,
  1,
  0,
  163,
  115,
  110,
  100,
  196,
  32,
  72,
  118,
  175,
  30,
  96,
  187,
  134,
  238,
  76,
  228,
  146,
  219,
  137,
  200,
  222,
  52,
  40,
  86,
  146,
  168,
  129,
  190,
  15,
  103,
  21,
  24,
  5,
  31,
  88,
  27,
  201,
  123,
  164,
  116,
  121,
  112,
  101,
  165,
  97,
  120,
  102,
  101,
  114,
  164,
  120,
  97,
  105,
  100,
  206,
  6,
  107,
  40,
  157,
]
`;
